# ipc-rs

./: .gitignore  Cargo.toml  result.txt
src/: errors.rs  flags.rs  futex.rs  lib.rs  mq.rs  pipe.rs  raw.rs  ring.rs  sem.rs  shm.rs
