[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", features = ["extra_traits"] }
thiserror = "1.0"
log = "0.4"

[features]
ring-futex = []
ring-futex-retry = ["ring-futex"]
